Fix nav logo sizing issue on smaller mobile

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ img {
 
 .nav-logo {
     height: 50px;
+    width: 50px;
 }
 
 .navbar-name {
